--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
     // Annotation processor
     ksp "androidx.lifecycle:lifecycle-compiler:$lifecycleVersion"
+
+    //splash Screen
+    implementation "androidx.core:core-splashscreen:1.0.1"
+
 }
